--- a/package.json
+++ b/package.json
@@ -10,16 +10,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~38.0.8",
-    "expo-status-bar": "^1.0.2",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "@expo/vector-icons": "^14.0.4",
+    "crypto-browserify": "^3.12.1",
+    "expo": "~52.0.26",
+    "expo-constants": "~17.0.5",
+    "expo-modules-core": "~2.2.0",
+    "expo-status-bar": "~2.0.1",
+    "formik": "^2.4.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.76.6",
+    "react-native-web": "~0.19.13",
+    "react-router-native": "^6.28.2",
+    "stream-browserify": "^3.0.0",
+    "uuid": "^9.0.0",
+    "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "@expo/webpack-config": "^19.0.1",
+    "babel-preset-expo": "~12.0.0",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0"
   },
   "private": true
 }
