--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "crypto-browserify": "^3.12.1",
     "expo": "~52.0.26",
     "expo-constants": "~17.0.5",
