--- a/BITACORAFRONTEND/package.json
+++ b/BITACORAFRONTEND/package.json
@@ -17,20 +17,22 @@
     "@react-native-community/datetimepicker": "^8.2.0",
     "axios": "^1.9.0",
     "crypto-browserify": "^3.12.1",
-    "expo": "~52.0.46",
+    "expo": "~50.0.0",
     "expo-cli": "^6.3.10",
-    "expo-constants": "~17.0.8",
-    "expo-linking": "^7.0.5",
-    "expo-modules-core": "~2.2.3",
+    "expo-constants": "~15.4.5",
+    "expo-font": "~11.10.2",
+    "expo-linking": "~6.2.2",
+    "expo-modules-core": "~1.11.7",
     "expo-router": "^4.0.20",
-    "expo-status-bar": "~2.0.1",
+    "expo-status-bar": "~1.11.1",
     "formik": "^2.4.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "0.76.9",
-    "react-native-safe-area-context": "^4.1.0",
-    "react-native-screens": "^4.4.0",
-    "react-native-web": "~0.19.13",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.2",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-web": "~0.19.10",
     "react-router-native": "^6.28.2",
     "stream-browserify": "^3.0.0",
     "uuid": "^9.0.0",
@@ -39,11 +41,11 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@expo/webpack-config": "^19.0.1",
-    "@types/react": "^18.2.0",
-    "@types/react-native": "^0.72.0",
+    "@types/react": "~18.2.45",
+    "@types/react-native": "~0.73.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "babel-preset-expo": "~12.0.0",
+    "babel-preset-expo": "~10.0.1",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^4.0.0",
