--- a/BITACORAFRONTEND/package.json
+++ b/BITACORAFRONTEND/package.json
@@ -25,21 +25,27 @@
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.6",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-signature-canvas": "^4.7.4",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "13.6.4",
+    "react-router-dom": "^7.6.0",
     "react-router-native": "^6.28.2",
     "stream-browserify": "^3.0.0",
     "uuid": "^9.0.0",
-    "vm-browserify": "^1.1.2"
+    "vm-browserify": "^1.1.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@expo/webpack-config": "^19.0.1",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
