--- a/BITACORAFRONTEND/package.json
+++ b/BITACORAFRONTEND/package.json
@@ -26,6 +26,7 @@
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.10",
+    "react-datepicker": "^8.3.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-reanimated": "~3.6.2",
