--- a/BITACORAFRONTEND/package.json
+++ b/BITACORAFRONTEND/package.json
@@ -2,6 +2,7 @@
   "name": "bitacora-frontend",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "homepage": "https://fergabsecand2205.github.io/BITACORAAPP",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
