--- a/BITACORAFRONTEND/package.json
+++ b/BITACORAFRONTEND/package.json
@@ -62,8 +62,7 @@
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.0.0",
-    "typescript": "^5.3.3",
-    "gh-pages": "^6.1.1"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
